--- a/SenMisin/config.yml
+++ b/SenMisin/config.yml
@@ -7,6 +7,9 @@ gec-kaldin:
 sifre-yanlis:
 - 'Bir çok defa şifreni yanlış girdin.'
 - 'Şifreni unuttuysan www.arvalex.com'
+title:
+  title: '§a{0}'
+  subtitle: '§7Saniye sonra lobiye aktarılacaksınız'
 lobi-komut: 'gitlanlobiye'
 Giris:
   satir1: '§k'
